overflow issue fixed in time sheet

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,3 @@ body{
     font-size: 13px;
     overflow-x: hidden;
 }
-body, html,
-body #main {
-  height: 100%;
-} 
