--- a/src/css/TimeSheet.css
+++ b/src/css/TimeSheet.css
@@ -31,7 +31,7 @@ main {
   font-weight: 600;
 }
 .section_container {
-  padding: 100px 0px 100px;
+  padding: 100px 0px 150px;
 }
 .section_heading {
   height: 52px;
